{
    "name": "CameraActions",
    "maps": [
        {
            "name": "CameraMovement",
            "id": "89affca9-50f3-422d-98a6-c08bf77cd8c4",
            "actions": [
                {
                    "name": "Direction_X",
                    "type": "Value",
                    "id": "a3811df9-646b-4148-acc0-deb6680fe91b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Direction_Y",
                    "type": "Value",
                    "id": "708fbe6a-b0aa-4020-a42d-b69e4e0c046d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "583d05e4-a521-4d74-932d-d6a2e34402e9",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "629a4bdd-a010-487a-bce8-fc2233195fa1",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f527f10-4ce7-4739-89aa-2038f5c6c238",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbc2614a-9d0a-4cca-8cd8-0c97b8aba558",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}